--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-
+Mongo_uri= "mongodb+srv://phani71995:phani71995@cluster0.zgfiixu.mongodb.net/foodwalaa?retryWrites=true&w=majority&appName=Cluster0"
+mycode="mynamephani"
